--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,13 @@
 services:
+  web:
+    image: mini-project
+    ports:
+      - 8000:8000
+    build: .
+    volumes:
+      - .:/app
+    depends_on:
+      - db
   db:
     image: postgres:16
     container_name: postgres
